--- a/css/material.css
+++ b/css/material.css
@@ -7852,6 +7852,12 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   padding-right: 0;
   padding-left: 0;
 }
+@media (max-width: 599px) {
+  .navbar > .container {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
 
 .navbar-inverse {
   color: white;
@@ -8068,12 +8074,6 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
 }
 
 @media (max-width: 599px) {
-  .navbar-toggleable {
-    display: block;
-  }
-  .navbar-toggleable > .container {
-    display: block;
-  }
   .navbar-toggleable .navbar-collapse {
     clear: both;
   }
@@ -8099,6 +8099,9 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
   }
   .navbar-toggleable .navbar-collapse {
     display: -webkit-box !important;
@@ -8112,12 +8115,6 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   }
 }
 @media (max-width: 959px) {
-  .navbar-toggleable-sm {
-    display: block;
-  }
-  .navbar-toggleable-sm > .container {
-    display: block;
-  }
   .navbar-toggleable-sm .navbar-collapse {
     clear: both;
   }
@@ -8143,6 +8140,9 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
   }
   .navbar-toggleable-sm .navbar-collapse {
     display: -webkit-box !important;
@@ -8156,12 +8156,6 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   }
 }
 @media (max-width: 1279px) {
-  .navbar-toggleable-md {
-    display: block;
-  }
-  .navbar-toggleable-md > .container {
-    display: block;
-  }
   .navbar-toggleable-md .navbar-collapse {
     clear: both;
   }
@@ -8187,6 +8181,9 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
   }
   .navbar-toggleable-md .navbar-collapse {
     display: -webkit-box !important;
@@ -8200,12 +8197,6 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   }
 }
 @media (max-width: 1919px) {
-  .navbar-toggleable-lg {
-    display: block;
-  }
-  .navbar-toggleable-lg > .container {
-    display: block;
-  }
   .navbar-toggleable-lg .navbar-collapse {
     clear: both;
   }
@@ -8231,6 +8222,9 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
   }
   .navbar-toggleable-lg .navbar-collapse {
     display: -webkit-box !important;
@@ -8242,12 +8236,6 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   .navbar-toggleable-lg .navbar-toggler {
     display: none;
   }
-}
-.navbar-toggleable-xl {
-  display: block;
-}
-.navbar-toggleable-xl > .container {
-  display: block;
 }
 .navbar-toggleable-xl .navbar-collapse {
   clear: both;
@@ -8272,6 +8260,9 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
 }
 .navbar-toggleable-xl .navbar-collapse {
   display: -webkit-box !important;
